# rust_cookbook

./: README.md
compression/: Cargo.toml
concurrency/data_parallelism/: Cargo.toml
concurrency/explicit_threads/: Cargo.toml
concurrency/explicit_threads/src/: main.rs
database_sqlite/: Cargo.toml  cats.db
database_sqlite/src/: main.rs
debugging/: Cargo.toml
debugging/configure_logging/: Cargo.toml
debugging/configure_logging/src/: main.rs
debugging/log_to_custom_location/: Cargo.toml
debugging/log_to_custom_location/src/: main.rs
debugging/src/: main.rs
generate_random_numbers/: Cargo.toml
generate_random_numbers/src/: main.rs
sort_a_vector/: Cargo.toml
sort_a_vector/src/: main.rs
versioning/: Cargo.toml
