[package]
name = "log_to_custom_location"
version = "0.1.0"
authors = ["GimpFlamingo <rayjkochenderfer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.11"
log4rs = " 0.11.0"
error-chain = "0.12.2"